hphp/hack/test/typecheck/collections_index_by_key_subtype.php.rust_elab.exp
File "collections_index_by_key_subtype.php", line 3, characters 6-15:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "collections_index_by_key_subtype.php", line 7, characters 6-18:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
